--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: edgeTransport
 Title: Prepare EDGE Transport Data for the REMIND model
-Version: 2.12.4
+Version: 2.13.0
 Authors@R: c(
-    person("Johanna", "Hoppe", , "johanna.hoppe@pik-potsdam.de", role = c("aut", "cre"),
+    person("Johanna", "Hoppe", email = "johanna.hoppe@pik-potsdam.de", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0004-6753-5090")),
     person("Alois", "Dirnaichner", email = "dirnaichner@pik-potsdam.de", role = "aut"),
     person("Marianna", "Rottoli", email = "rottoli@pik-potsdam.de", role = "aut"),
-    person("Jarusch", "Muessel", , "jarusch.muessel@pik-potsdam.de", role = "aut"))
+    person("Jarusch", "Muessel", email = "jarusch.muessel@pik-potsdam.de", role = c("aut"),
+           comment = c(ORCID = "0000-0002-1857-7866")),
+    person("Alex K.", "Hagen",email = "alex.hagen@pik-potsdam.de", role = c("aut"), comment = c(ORCID = "0000-0003-4793-8664")))
 Description: EDGE-T is a fork of the GCAM transport module https://jgcri.github.io/gcam-doc/energy.html#transportation with a high level of detail in its representation of technological and modal options. It is a partial equilibrium model with a nested multinomial logit structure and relies on the modified logit formulation. Most of the sources are not publicly available. PIK-internal users can find the sources in the distributed file system in the folder `/p/projects/rd3mod/inputdata/sources/EDGE-Transport-Standalone`.
 Depends:
     R (>= 3.5.0),
@@ -19,7 +21,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
-Date: 2025-01-08
+Date: 2025-01-22
 Config/testthat/edition: 3
 Imports:
     rmndt,
